# ruthenium

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  compare.py  test.sh
src/: display.rs  ignore.rs  main.rs  options.rs  pcre.rs  search.rs
