[package]
name = "ruthenium"
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]

[[bin]]
name = "ru"

[features]
default = []
pcre = []

[profile.release]
lto = true

[dependencies]
libc = "*"
atty = "*"
walkdir = "*"
memmap = "*"
scoped-pool = "*"
num_cpus = "*"
glob = "*"

[dependencies.regex]
git = "https://github.com/rust-lang-nursery/regex"
branch = "raw-bytes"

[dependencies.clap]
version = "2"
default_features = false
features = []
